@@ -12,7 +12,6 @@
    etaoin.api/with-firefox-headless  etaoin.api/with-browser
    etaoin.api/with-edge              etaoin.api/with-browser
    etaoin.api/with-edge-headless     etaoin.api/with-browser
-   etaoin.api/with-phantom           etaoin.api/with-browser
    etaoin.api/with-safari            etaoin.api/with-browser
 
    etaoin.api/with-driver            etaoin.api/with-driver
@@ -26,7 +25,6 @@
    etaoin.api2/with-edge-headless    etaoin.api2/with-browser
    etaoin.api2/with-firefox          etaoin.api2/with-browser
    etaoin.api2/with-firefox-headless etaoin.api2/with-browser
-   etaoin.api2/with-phantom          etaoin.api2/with-browser
    etaoin.api2/with-safari           etaoin.api2/with-browser}}
  :lint-as
  {etaoin.api/with-pointer-left-btn-down clojure.core/->}}
