@@ -48,23 +48,15 @@ jobs:
     # Install Babashka
     #
     - name: Install Babashka
-      uses: DeLaGuardo/setup-clojure@12.5
+      uses: DeLaGuardo/setup-clojure@13.1
       with:
         bb: 'latest'
 
     #
     # Install Clojure
     #
-    - name: Install clojure (windows)
-      if: matrix.os == 'windows'
-      # On windows, deps.clj's deps.exe is used in place of clojure to avoid complexities of official clojure install
-      run: |
-       PowerShell -Command "iwr -useb https://raw.githubusercontent.com/borkdude/deps.clj/master/install.ps1 | iex"
-       Rename-Item $HOME\deps.clj\deps.exe clojure.exe
-       echo "$HOME\deps.clj" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Install Clojure
-      if: matrix.os == 'ubuntu'
-      uses: DeLaGuardo/setup-clojure@12.5
+      uses: DeLaGuardo/setup-clojure@13.1
       with:
         cli: 'latest'
 
