@@ -1,12 +1,12 @@
 {:paths ["src"]
 
- :deps {org.clojure/clojure {:mvn/version "1.9.0"}
-        org.clojure/tools.reader {:mvn/version "1.4.2"}
-        babashka/fs {:mvn/version "0.5.21"}
-        clj-kondo/clj-kondo {:mvn/version "2024.05.24"}
+ :deps {org.clojure/clojure {:mvn/version "1.11.4"}
+        org.clojure/tools.reader {:mvn/version "1.5.0"}
+        babashka/fs {:mvn/version "0.5.24"}
+        clj-kondo/clj-kondo {:mvn/version "2025.01.16"}
         dev.nubank/docopt {:mvn/version "0.6.1-fix7"}
-        metosin/malli {:mvn/version "0.16.2"}
-        rewrite-clj/rewrite-clj  {:mvn/version "1.1.47"}}
+        metosin/malli {:mvn/version "0.17.0"}
+        rewrite-clj/rewrite-clj  {:mvn/version "1.1.49"}}
 
  :aliases {;; we use babashka/neil for project attributes
            ;; publish workflow references these values (and automatically bumps patch component of version)
@@ -17,13 +17,13 @@
 
            ;;
            ;; Clojure versions we support
-           ;; min for generation is v1.9
+           ;; min for generation is v1.11.4
            ;; min for running generated v1.8
            :1.8 {:override-deps {org.clojure/clojure {:mvn/version "1.8.0"}}}
            :1.9 {:override-deps {org.clojure/clojure {:mvn/version "1.9.0"}}}
            :1.10 {:override-deps {org.clojure/clojure {:mvn/version "1.10.3"}}}
-           :1.11 {:override-deps {org.clojure/clojure {:mvn/version "1.11.3"}}}
-           :1.12 {:override-deps {org.clojure/clojure {:mvn/version "1.12.0-beta2"}}}
+           :1.11 {:override-deps {org.clojure/clojure {:mvn/version "1.11.4"}}}
+           :1.12 {:override-deps {org.clojure/clojure {:mvn/version "1.12.0"}}}
 
            ;; clojure -X support for local examples
            :test-doc-blocks {:ns-default lread.test-doc-blocks}
@@ -84,7 +84,7 @@
            ;;
            ;; Deployment
            ;;
-           :build {:deps {io.github.clojure/tools.build {:mvn/version "0.10.5"}}
+           :build {:deps {io.github.clojure/tools.build {:mvn/version "0.10.6"}}
                    :extra-paths ["src" "build"]
                    :ns-default build}
 
@@ -93,9 +93,9 @@
            :deploy {:extra-deps {slipset/deps-deploy {:mvn/version "0.2.2"}}}
 
            ;; Maintenance
-           :outdated {:extra-deps {org.clojure/clojure {:mvn/version "1.11.3"}
-                                   com.github.liquidz/antq {:mvn/version "2.8.1206"}
-                                   org.slf4j/slf4j-simple {:mvn/version "2.0.13"} ;; to rid ourselves of logger warnings
+           :outdated {:extra-deps {org.clojure/clojure {:mvn/version "1.12.0"}
+                                   com.github.liquidz/antq {:mvn/version "2.11.1264"}
+                                   org.slf4j/slf4j-simple {:mvn/version "2.0.16"} ;; to rid ourselves of logger warnings
                                    }
                       :main-opts ["-m" "antq.core" "--ignore-locals"
                                   "--exclude=lambdaisland/kaocha@1.88.1376" ;; breaks clojure 1.9 compat: https://github.com/lambdaisland/kaocha/issues/433
